--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,16 @@
 {
-  // Set the default
-  "editor.formatOnPaste": false,
-  "editor.formatOnSave": true,
-  "git.enableCommitSigning": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+	// Set the default
+	"editor.formatOnPaste": false,
+	"editor.formatOnSave": true,
+	"git.enableCommitSigning": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"eslint.enable": true,
+	"eslint.alwaysShowStatus": true,
 
-  // Enable per-language
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnPaste": false,
-    "editor.formatOnSave": true
-  }
+	// Enable per-language
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode",
+		"editor.formatOnPaste": false,
+		"editor.formatOnSave": true
+	}
 }
