--- a/.github/publish.yaml
+++ b/.github/publish.yaml
@@ -1,7 +1,7 @@
 name: Publish package to GitHub Packages
 on:
   release:
-    types: [created]
+    types: [created, published]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,6 +18,6 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
           scope: "@md-akhi"
       - run: npm ci
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
