--- a/.github/workflow/publish-github.yaml
+++ b/.github/workflow/publish-github.yaml
@@ -1,4 +1,4 @@
-name: Publish package to GitHub Packages
+name: Publish Package to GitHub Packages
 on:
   release:
     types: [created, published]
