--- a/package.json
+++ b/package.json
@@ -1,13 +1,37 @@
 {
   "name": "@md-akhi/shdate",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha",
   "description": "Date and Time Related Extensions SH{ Shamsi Hijri, Solar Hijri, Iranian Hijri }",
-  "main": "SHDate.js",
+
+  "main": "./dist/mjs/SHDateTime.js",
+  "module": "./dist/cjs/SHDateTime.js",
+  "types": "./dist/ts/SHDateTime.d.ts",
   "type": "module",
   "scripts": {
     "start": "npm run dev",
-    "dev": "nodemon test/tst.js",
-    "test": "node src/SHDate.js > test/out.out"
+    "dev": "nodemon test/tst.ts",
+    "tsc:build": "npm run tsc:clean && npm run tsc:mjs && npm run tsc:cjs && npm run tsc:ts",
+    "tsc:clean": "rm -rf ./dist",
+    "tsc:mjs": "tsc -p ./build/tsconfig/mjs.json",
+    "tsc:cjs": "tsc -p ./build/tsconfig/cjs.json",
+    "tsc:ts": "tsc",
+    "tsc:watch": "tsc -w",
+    "tsc:webpack": "webpack",
+    "test": "node src/SHDateTime.ts > test/out.out"
+  },
+  "exports": {
+    ".": {
+      "module": "./dist/mjs/SHDateTime.js",
+      "import": "./dist/mjs/SHDateTime.js",
+      "require": "./dist/cjs/SHDateTime.js",
+      "types": "./dist/ts/SHDateTime.d.ts",
+      "default": "./dist/mjs/SHDateTime.js"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "SHDateTime": ["dist/ts/SHDateTime.d.ts"]
+    }
   },
   "repository": {
     "type": "git",
@@ -30,7 +54,11 @@
     "lint-staged": "^12.1.5",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5",
+    "webpack-cli": "^4.9.2"
   },
   "husky": {
     "hooks": {
@@ -38,7 +66,7 @@
     }
   },
   "lint-staged": {
-    "*.{js}": ["prettier --write", "eslint --fix", "git add"],
+    "*.{js,ts}": ["prettier --write", "eslint --fix", "git add"],
     "*": ["prettier --write", "git add"]
   }
 }
