chore: update config npm

--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,9 @@
-.*
-tsconfig.json
-webpack.config.js
 node_modules
-build
-.husky
-.vscode
-.github
 nodemon.json
-package-lock.json
-*.map
-.gitignore
+docs
+**/*.spec.js
+**/*.spec.ts
+tsconfig*.json
+coverage
+.npmrc
 .git
-.npmignore
