--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,16 @@
 {
-  "version": "1.0.0",
-  "extends": "./build/tsconfig/tsconfig-base.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist/ts",
-    "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
-    "moduleResolution": "node",
-    "strict": true,
-    "declaration": true,
-    "sourceMap": true
+    "module": "commonjs",
+    "outDir": "lib",
+    "target": "es6",
+    "sourceMap": true,
+    "declaration": true
   },
-  // NEW: Options for file/directory watching
-  "watchOptions": {
-    // Use native file system events for files and directories
-    "watchFile": "useFsEvents",
-    "watchDirectory": "useFsEvents",
-    // Poll files for updates more frequently
-    // when they're updated a lot.
-    "fallbackPolling": "dynamicPriority",
-    // Don't coalesce watch notification
-    "synchronousWatchDirectory": true,
-    // Finally, two additional settings for reducing the amount of possible
-    // files to track  work from these directories
-    "excludeDirectories": ["../../node_modules", "../../dist"]
+  "include": ["tests/**/*.ts"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
   }
 }
