--- a/package.json
+++ b/package.json
@@ -1,64 +1,66 @@
 {
   "name": "@md-akhi/shdate",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-beta.1",
   "description": "Date and Time Related Extensions SH{ Shamsi Hijri, Solar Hijri, Iranian Hijri }",
-
-  "main": "./dist/mjs/SHDateTime.js",
-  "module": "./dist/cjs/SHDateTime.js",
-  "types": "./dist/ts/SHDateTime.d.ts",
-  "type": "module",
+  "keywords": ["date", "time", "datetime"],
+  "author": "Mohammad Amanalikhani <md.akhi.ir@gmail.com>",
+  "license": "AGPL-3.0",
+  "main": "./lib/src/index.js",
+  "module": "./lib/mjs/index.js",
+  "types": "./lib/src/index.d.ts",
   "scripts": {
     "start": "npm run dev",
-    "dev": "nodemon test/tst.ts",
-    "tsc:build": "npm run tsc:clean && npm run tsc:mjs && npm run tsc:cjs && npm run tsc:ts",
-    "tsc:clean": "rm -rf ./dist",
-    "tsc:mjs": "tsc -p ./build/tsconfig/mjs.json",
-    "tsc:cjs": "tsc -p ./build/tsconfig/cjs.json",
-    "tsc:ts": "tsc",
-    "tsc:watch": "tsc -w",
-    "tsc:webpack": "webpack",
-    "test": "node src/SHDateTime.ts > test/out.out"
+    "dev": "nodemon npm run dev:watch",
+    "dev:watch": "npm run dev:build && npm run watch",
+    "dev:build": "npm run clean:lib && npm run tsc:cjs",
+    "watch:tsc": "tsc -w",
+    "watch": "node lib/tests/tst.js",
+    "clean:lib": "del lib",
+    "tsc:cjs": "tsc -p ./tsconfig.json",
+    "build": "npm run clean:lib && npm run tsc",
+    "tsc": "npm run tsc:cjs && npm run tsc:esm && gulp",
+    "tsc:esm": "tsc -p ./tsconfig.esm.json",
+    "test": "nodemon npm run test:dev  ",
+    "test:dev": "npm run dev:build && mocha",
+    "postinstall": "husky install",
+    "prepublishOnly": "npm run build"
   },
   "exports": {
-    ".": {
-      "module": "./dist/mjs/SHDateTime.js",
-      "import": "./dist/mjs/SHDateTime.js",
-      "require": "./dist/cjs/SHDateTime.js",
-      "types": "./dist/ts/SHDateTime.d.ts",
-      "default": "./dist/mjs/SHDateTime.js"
-    }
+    "import": "./lib/mjs/index.js",
+    "require": "./lib/src/index.js",
+    "types": "./lib/src/index.d.ts"
   },
-  "typesVersions": {
-    "*": {
-      "SHDateTime": ["dist/ts/SHDateTime.d.ts"]
-    }
+  "directories": {
+    "lib": "./lib",
+    "src": "./src",
+    "tests": "./tests",
+    "docs": "./docs"
   },
+  "man": ["./docs/**/*.md"],
   "repository": {
     "type": "git",
     "url": "https://github.com/md-akhi/SHDate-js.git"
   },
-  "keywords": ["date", "time", "datetime"],
-  "author": "Mohammad Amanalikhani <md.akhi.ir@gmail.com>",
-  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/md-akhi/SHDate-js/issues"
   },
   "homepage": "https://github.com/md-akhi/SHDate-js#readme",
   "devDependencies": {
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.21",
     "cross-env": "^7.0.3",
+    "del": "^6.0.0",
+    "del-cli": "^4.0.1",
     "eslint": "^8.6.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
-    "webpack-cli": "^4.9.2"
+    "typescript": "^4.5.5"
   },
   "husky": {
     "hooks": {
