--- a/.github/workflow/publish.yaml
+++ b/.github/workflow/publish.yaml
@@ -1,7 +1,9 @@
-name: Publish Package to GitHub Packages
+name: Publish Package to GitHub/NPM Packages
 on:
-  release:
-    types: [created, published]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,11 +15,19 @@ jobs:
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v2
         with:
+          always-auth: true
           node-version: "16.x"
-          registry-url: "https://npm.pkg.github.com"
+          registry-url: "https://registry.npmjs.org/"
           # Defaults to the user or organization that owns the workflow file
           scope: "@md-akhi"
       - run: npm ci
+      - run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # Setup .npmrc file to publish to Npm Packages
+      - uses: actions/setup-node@v2
+        with:
+          registry-url: "https://npm.pkg.github.com"
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
