--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
 language: node_js
 node_js:
-  - "16"
+  - "lts/*"
+install:
+  - npm ci
+git:
+  depth: 2
+branches:
+  only:
+    - dev
+jobs:
+  include:
+    - stage: "Tests" # naming the Tests stage
+      name: "Unit Tests" # names the first Tests stage job
+      script: npm test
+
+before_script:
+  - npm install -g gulp-cli
+script: gulp
