--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,11 +23,11 @@ jobs:
       - run: npm i
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       # Setup .npmrc file to publish to Npm Packages
       - uses: actions/setup-node@v2
         with:
           registry-url: "https://npm.pkg.github.com"
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
