--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,5 +21,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm i
-      - run: npm i gulp
+      - run: npm i gulp-cli
       - run: npm test
