--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -20,7 +20,8 @@ jobs:
           registry-url: "https://registry.npmjs.org/"
           # Defaults to the user or organization that owns the workflow file
           scope: "@md-akhi"
-      - run: npm i
+      - name: Install dependencies
+      - run: npm install
       - run: npm publish --access public
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
