--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,7 @@ jobs:
           scope: "@md-akhi"
       - name: Install dependencies
       - run: npm install
+      - run: npm run build --if-present
       - run: npm publish --access public
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
