--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,4 +24,5 @@ jobs:
       - name: Install dependencies
       - run: npm install
       - run: npm install -g gulp-cli
+      - run: npm run build --if-present
       - run: npm test
