--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ branches:
     - dev
 jobs:
   include:
+    - stage: "Build"
+      name: "Build lib"
+      script: npm run build --if-present
     - stage: "Tests" # naming the Tests stage
       name: "Unit Tests" # names the first Tests stage job
       script: npm test
