--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "dev:build": "npm run clean:lib && npm run tsc:cjs",
     "watch:tsc": "tsc -w",
     "watch": "node lib/tests/dev.js",
-    "clean:lib": "del lib",
+    "clean:lib": "rm -rf lib",
     "tsc:cjs": "tsc -p ./tsconfig.json",
     "build": "npm run clean:lib && npm run tsc",
     "tsc": "npm run tsc:cjs && npm run tsc:esm && gulp",
     "tsc:esm": "tsc -p ./tsconfig.esm.json",
-    "test": "nodemon npm run test:dev  ",
-    "test:dev": "npm run dev:build && mocha",
+    "test": " npm run dev:build && mocha",
+    "test:dev": "nodemon npm run test",
     "postinstall": "husky install",
     "prepublishOnly": "npm run build"
   },
@@ -49,8 +49,6 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
     "cross-env": "^7.0.3",
-    "del": "^6.0.0",
-    "del-cli": "^4.0.1",
     "eslint": "^8.6.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
