--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,8 +1,8 @@
-name: Test
+name: Test CI
 
 on:
   push:
-    branches: [dev, rls/*]
+    branches: [dev]
   pull_request:
     branches: [dev]
 
@@ -13,15 +13,15 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - name: Install dependencies
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
+      - run: |
+          npm install
+          npm run build --if-present
+          npm test
