--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,17 +13,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       # Setup .npmrc file to publish to GitHub Packages
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           always-auth: true
           node-version: "16.x"
-          registry-url: "https://registry.npmjs.org/"
+          registry-url: "https://registry.npmjs.org"
           # Defaults to the user or organization that owns the workflow file
           scope: "@md-akhi"
-      - name: Install dependencies
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm publish --access public
+      - run: |
+          npm install
+          npm run build --if-present
+          npm publish --access public
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       # Setup .npmrc file to publish to Npm Packages
