--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 package-lock=false
 always-auth=true
+registry=registry.npmjs.org
+//registry.npmjs.org/::_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
