ci(fix): info npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 package-lock=false
 always-auth=true
-registry=registry.npmjs.org
-//registry.npmjs.org/::_authToken=${NPM_TOKEN}
-//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+#registry=registry.npmjs.org
+#//registry.npmjs.org/::_authToken=${NODE_AUTH_TOKEN}
+#//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
