--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,11 +25,11 @@ jobs:
           npm run build --if-present
           npm publish --access public
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       # Setup .npmrc file to publish to Npm Packages
       - uses: actions/setup-node@v2
         with:
           registry-url: "https://npm.pkg.github.com"
       - run: npm publish --access public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
