--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,11 @@
 package-lock=false
+
+
+//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+registry=https://registry.npmjs.org/
+
+
+# //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+# @md-akhi:registry=https://npm.pkg.github.com
+
 always-auth=true
-#registry=registry.npmjs.org
-#//registry.npmjs.org/::_authToken=${NODE_AUTH_TOKEN}
-#//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
