--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,32 +7,49 @@ on:
     branches: [main]
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
       - uses: actions/checkout@v2
-      # Setup .npmrc file to publish to Npm Packages
       - uses: actions/setup-node@v2
         with:
-          always-auth: true
           node-version: "16.x"
-          registry-url: "https://registry.npmjs.org"
-          # Defaults to the user or organization that owns the workflow file
-          scope: "@md-akhi"
       - run: |
           npm install
           npm run build --if-present
+          npm test
+
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      # Setup .npmrc file to publish to NPM Packages
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16.x"
+          registry-url: https://registry.npmjs.org/
+      - run: |
+          npm install
           npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+  publish-github:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v2
         with:
-          registry-url: "https://npm.pkg.github.com"
-      - run: npm publish --access public
+          node-version: "16.x"
+          registry-url: https://npm.pkg.github.com
+          # Defaults to the user or organization that owns the workflow file
+          scope: "@md-akhi"
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - run: |
+          npm install
+          npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
