--- a/.npmrc
+++ b/.npmrc
@@ -1,11 +1,11 @@
 package-lock=false
 
 
-//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
-registry=https://registry.npmjs.org/
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+@md-akhi:registry=https://registry.npmjs.org/
 
 
-# //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
-# @md-akhi:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+@md-akhi:registry=https://npm.pkg.github.com
 
 always-auth=true
