--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,9 +28,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16.x"
-          registry-url: https://registry.npmjs.org/
-          # Defaults to the user or organization that owns the workflow file
-          scope: "@md-akhi"
+          always-auth: true
+      - name: Set package registry
+        run: npm config set @md-akhi:registry https://registry.npmjs.org/
+      - name: Npm registry authentication
+        run: npm set //registry.npmjs.org/:_authToken ${{ NPM_TOKEN }}
       - run: |
           npm install
           npm publish --access public
@@ -46,9 +48,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16.x"
-          registry-url: https://npm.pkg.github.com
-          # Defaults to the user or organization that owns the workflow file
-          scope: "@md-akhi"
+          always-auth: true
+      - name: Set package registry
+        run: npm config set @md-akhi:registry https://npm.pkg.github.com/
+      - name: Github package registry authentication
+        run: npm set //npm.pkg.github.com/:_authToken ${{ GITHUB_TOKEN }}
       - run: |
           npm install
           npm publish
