--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Set package registry
         run: npm config set @md-akhi:registry https://registry.npmjs.org/
       - name: Npm registry authentication
-        run: npm set //registry.npmjs.org/:_authToken ${{ NPM_TOKEN }}
+        run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
       - run: |
           npm install
           npm publish --access public
@@ -52,7 +52,7 @@ jobs:
       - name: Set package registry
         run: npm config set @md-akhi:registry https://npm.pkg.github.com/
       - name: Github package registry authentication
-        run: npm set //npm.pkg.github.com/:_authToken ${{ GITHUB_TOKEN }}
+        run: npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
       - run: |
           npm install
           npm publish
