chore(docs): update readme

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,8 +36,8 @@ jobs:
       - run: |
           npm install
           npm publish --access public
-        env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+        # env:
+        #   NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
   publish-github:
     needs: build
@@ -55,6 +55,6 @@ jobs:
         run: npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
       - run: |
           npm install
-          npm publish
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          npm publish --access public
+        # env:
+        #   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
