--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  build-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
           npm test
 
   publish-npm:
-    needs: build
+    needs: build-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -28,7 +28,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16.x"
-          always-auth: true
       - name: Set package registry
         run: npm config set @md-akhi:registry https://registry.npmjs.org/
       - name: Npm registry authentication
@@ -36,11 +35,11 @@ jobs:
       - run: |
           npm install
           npm publish --access public
-        # env:
-        #   NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+      - env:
+         NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
-  publish-github:
-    needs: build
+  publish-gpr: #github
+    needs: build-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -55,6 +54,6 @@ jobs:
         run: npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
       - run: |
           npm install
-          npm publish --access public
-        # env:
-        #   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          npm publish
+      - env:
+         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
