--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: SHDate homepage
+description: Date and Time Related Extensions - SH (Solar Hijri, Shamsi Hijri, Iranian Hijri)
