--- a/tsconfig.mjs.json
+++ b/tsconfig.mjs.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "module": "esnext",
-    "outDir": "lib/mjs",
+    "outDir": "dist/mjs",
     "target": "esnext"
   }
 }
