--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,9 +15,10 @@
     "lib": ["esnext"],
     "moduleResolution": "node",
     "types": ["node"],
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "removeComments": true
   },
   "compileOnSave": false,
-  "exclude": ["node_modules", "lib"],
-  "include": ["src/**/*.ts"]
+  "exclude": ["node_modules", "dist"],
+  "include": ["src"]
 }
