--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,11 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "lib",
+    "outDir": "dist/cjs",
     "target": "es6",
     "sourceMap": true,
     "declaration": true
   },
-  "include": ["tests/**/*.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
