--- a/tsconfig.mjs.json
+++ b/tsconfig.mjs.json
@@ -3,6 +3,13 @@
   "compilerOptions": {
     "module": "esnext",
     "outDir": "dist/mjs",
-    "target": "esnext"
+    "target": "esnext",
+    "sourceMap": true,
+    "declaration": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "esnext"
+    }
   }
 }
