chore(npm): update npm ignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,20 @@
-node_modules
+/.git
+/.vscode
+/.github
+/node_modules
+/docs
+/tests
+/coverage
+/build
+.eslintrc
+.eslintignore
+.editorconfig
+.gitignore
+.prettierrc
+.prettierignore
+.travis.yml
+.mocharc.json
 nodemon.json
-docs
-**/*.spec.js
-**/*.js.map
-**/*.spec.ts
 tsconfig*.json
-coverage
-.npmrc
-.git
+nodemon.json
+gulpfile.js
