--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@md-akhi/shdatetime",
-  "version": "1.0.1-rc1",
+  "version": "1.0.2-rc2",
   "description": "Date and Time Related Extensions SH{ Shamsi Hijri, Solar Hijri, Iranian Hijri }",
   "keywords": [
     "date",
@@ -48,7 +48,9 @@
     "tests": "./tests",
     "docs": "./docs"
   },
-  "man": ["./docs/**/*.md"],
+  "man": [
+    "./docs/**/*.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/md-akhi/SHDateTime-js.git"
@@ -74,6 +76,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "terser": "^5.12.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   },
   "husky": {
@@ -82,7 +85,14 @@
     }
   },
   "lint-staged": {
-    "*.{ts}": ["prettier --write", "eslint --fix", "git add"],
-    "*": ["prettier --write", "git add"]
+    "*.{ts}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
