--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "moduleResolution": "node",
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
-    "removeComments": true
+    "removeComments": true,
+    "importHelpers": true
   },
   "compileOnSave": false,
   "exclude": ["node_modules", "dist"],
