--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -1,10 +1,14 @@
 {
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "module": "es2015",
+    "module": "UMD",
     "outDir": "dist/browser",
-    "target": "es5",
-    "noImplicitAny": false,
-    "lib": ["es6", "dom", "es5"]
-  }
+    "target": "ES6",
+    "lib": ["es2016", "dom"],
+    "esModuleInterop": false,
+    "noImplicitAny": true,
+    "removeComments": true
+  },
+  "compileOnSave": false,
+  "include": ["src/browser/**.ts"],
+  "exclude": ["node_modules", "dist"]
 }
