--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist/cjs",
-    "target": "es6",
+    "target": "ES6",
     "sourceMap": true,
     "declaration": true
   },
