--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,17 +1,22 @@
-name: Publish Package to GitHub And NPM
+name: Packages CI
 
 on:
   push:
     branches: [main]
+    tags:
+      - "*.*.*"
   pull_request:
     branches: [main]
 
 env:
-  NPM_TOKEN: ${{secrets.NPM_TOKEN}}
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  GITHUB_USERNAME: ${{ github.actor }}
+  NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+  DOCKER_HUB_TOKEN: ${{secrets.DOCKER_HUB_TOKEN}}
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
 
 jobs:
-  build-test:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,11 +25,11 @@ jobs:
           node-version: "16.x"
       - run: |
           npm install
-          npm run build --if-present
-          npm test
+          npm run build
+          npm test --if-present
 
-  publish-npm: #NPM Packages
-    needs: build-test
+  publish-npm: # NPM Packages
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -41,19 +46,20 @@ jobs:
         run: npm set //registry.npmjs.org/:_authToken $NPM_TOKEN
       - run: |
           npm install
-          npm run build
+          npm run build --if-present
           npm publish --access public
         env:
           NPM_TOKEN: $NPM_TOKEN
 
-  publish-gpr: #GitHub Packages
-    needs: build-test
+  publish-gpr: # GitHub Packages
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out Repo
+        uses: actions/checkout@v2
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v2
         with:
@@ -64,7 +70,48 @@ jobs:
         run: npm set //npm.pkg.github.com/:_authToken $GITHUB_TOKEN
       - run: |
           npm install
-          npm run build
+          npm run build --if-present
           npm publish
         env:
           GITHUB_TOKEN: $GITHUB_TOKEN
+
+  publish-docker: # Docker Hub
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Out Repo
+        uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: $DOCKER_HUB_USERNAME
+          password: $DOCKER_HUB_TOKEN
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: $DOCKER_HUB_USERNAME/shdatetime:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: $GITHUB_USERNAME
+          password: $GITHUB_TOKEN
+          tags: ghcr.io/${{ github.repository_owner }}/shdatetime:latest
+        env:
+          DOCKER_HUB_TOKEN: $DOCKER_HUB_TOKEN
+          DOCKER_HUB_USERNAME: $DOCKER_HUB_USERNAME
+          GITHUB_TOKEN: $GITHUB_TOKEN
+          GITHUB_USERNAME: $GITHUB_USERNAME
