--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 {
 	"root": true,
-	"plugins": [ "node"],
-	"extends": ["eslint:recommended"],
+	"plugins": ["node", "@typescript-eslint"],
+	"extends": [
+		"eslint:recommended",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:@typescript-eslint/recommended-requiring-type-checking"
+	],
+	"parser": "@typescript-eslint/parser",
 	"env": {
 		"browser": true,
 		"node": true,
@@ -9,12 +14,14 @@
 	},
 	"parserOptions": {
 		"ecmaVersion": "latest",
-		"sourceType": "module"
+		"sourceType": "module",
+		"tsconfigRootDir": "./",
+		"project": ["./tsconfig*.json"]
 	},
 	"rules": {
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "double"],
 		"semi": ["error", "always"],
-		"no-empty": "warn",
+		"no-empty": "warn"
 	}
 }
