--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,8 +17,7 @@
     "moduleResolution": "node",
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
-    "removeComments": true,
-    "importHelpers": true
+    "removeComments": true
   },
   "compileOnSave": false,
   "exclude": ["node_modules", "dist"],
