--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,11 @@
-/.git
-/.vscode
-/.github
-/node_modules
-/docs
-/src
-/tests
-/coverage
+.git
+.vscode
+.github
+node_modules
+docs
+src
+tests
+coverage
 .eslintrc
 .eslintignore
 .editorconfig
