--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@md-akhi/shdatetime",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Date and Time Related Extensions SH{Shamsi Hijri, Solar Hijri, Iranian Hijri}",
   "keywords": [
     "date",
@@ -60,8 +60,16 @@
     "tests": "./tests",
     "docs": "./docs"
   },
-  "files": ["LICENSE", "README.md", "CHANGELOG.md", "docs", "dist"],
-  "man": ["./docs/**/*.md"],
+  "files": [
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md",
+    "docs",
+    "dist"
+  ],
+  "man": [
+    "./docs/**/*.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/md-akhi/SHDateTime-js.git"
@@ -108,7 +116,14 @@
     }
   },
   "lint-staged": {
-    "/**/*.{ts}": ["prettier --write", "eslint --fix", "git add"],
-    "*": ["prettier --write", "git add"]
+    "/**/*.{ts}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
