--- a/package.json
+++ b/package.json
@@ -51,12 +51,8 @@
   },
   "typesVersions": {
     "*": {
-      ".": [
-        "dist/types/index.d.ts"
-      ],
-      "./*": [
-        "./dist/types/i18n/*.d.js"
-      ]
+      ".": ["dist/types/index.d.ts"],
+      "./*": ["./dist/types/i18n/*.d.js"]
     }
   },
   "directories": {
@@ -65,16 +61,8 @@
     "tests": "./tests",
     "docs": "./docs"
   },
-  "files": [
-    "LICENSE",
-    "README.md",
-    "CHANGELOG.md",
-    "docs",
-    "dist"
-  ],
-  "man": [
-    "./docs/**/*.md"
-  ],
+  "files": ["LICENSE", "README.md", "CHANGELOG.md", "docs", "dist"],
+  "man": ["./docs/**/*.md"],
   "repository": {
     "type": "git",
     "url": "https://github.com/md-akhi/SHDateTime-js.git"
@@ -98,12 +86,10 @@
     "eslint-config-recommended": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-header": "^2.0.9",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
-    "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "husky": "^7.0.4",
@@ -121,14 +107,7 @@
     }
   },
   "lint-staged": {
-    "/**/*.{ts}": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ],
-    "*": [
-      "prettier --write",
-      "git add"
-    ]
+    "/**/*.{ts}": ["prettier --write", "eslint --fix", "git add"],
+    "*": ["prettier --write", "git add"]
   }
 }
