fix: added @babel/core for run auto test

--- a/package.json
+++ b/package.json
@@ -51,8 +51,12 @@
   },
   "typesVersions": {
     "*": {
-      ".": ["dist/types/index.d.ts"],
-      "./*": ["./dist/types/i18n/*.d.js"]
+      ".": [
+        "dist/types/index.d.ts"
+      ],
+      "./*": [
+        "./dist/types/i18n/*.d.js"
+      ]
     }
   },
   "directories": {
@@ -61,8 +65,16 @@
     "tests": "./tests",
     "docs": "./docs"
   },
-  "files": ["LICENSE", "README.md", "CHANGELOG.md", "docs", "dist"],
-  "man": ["./docs/**/*.md"],
+  "files": [
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md",
+    "docs",
+    "dist"
+  ],
+  "man": [
+    "./docs/**/*.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/md-akhi/SHDateTime-js.git"
@@ -72,6 +84,7 @@
   },
   "homepage": "https://github.com/md-akhi/SHDateTime-js#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.16.11",
     "@tsconfig/recommended": "^1.0.1",
     "@types/chai": "^4.3.0",
@@ -107,7 +120,14 @@
     }
   },
   "lint-staged": {
-    "/**/*.{ts}": ["prettier --write", "eslint --fix", "git add"],
-    "*": ["prettier --write", "git add"]
+    "/**/*.{ts}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
