--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,8 +16,8 @@
     "lib": ["esnext"],
     "moduleResolution": "node",
     "types": ["node"],
-    "typeRoots": ["node_modules/@types"],
-    "removeComments": true
+    "typeRoots": ["node_modules/@types"]
+    // "removeComments": true
   },
   "compileOnSave": false,
   "exclude": ["node_modules", "dist"],
