--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,6 +43,11 @@ jobs:
           npm install
           npm run build
           npm publish --access public
+
+      - name: Set package registry without -scope
+        run: npm config set registry https://registry.npmjs.org/
+      - run: |
+          npm publish --access public
         env:
           NPM_TOKEN: $NPM_TOKEN
 
@@ -65,6 +70,11 @@ jobs:
       - run: |
           npm install
           npm run build
+          npm publish
+
+      - name: Set package registry without -scope
+        run: npm config set registry https://npm.pkg.github.com/
+      - run: |
           npm publish
         env:
           GITHUB_TOKEN: $GITHUB_TOKEN
