--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "AGPL-3.0",
   "scripts": {
     "start": "npm run dev",
-    "dev": "nodemon --exec run-s dev:* --watch ./src --inspect",
-    "dev:clean": "rm -rf dist/src dist/tests",
+    "dev": "nodemon --exec run-s dev:* --watch ./src",
+    "dev:clean": "rm -rf dist/src dist/tests tests/tst.out",
     "dev:watch": "node dist/tests/dev.js",
     "tsc:cjs": "tsc --project tsconfig.json  && echo {\"type\":\"commonjs\"}>dist/cjs/package.json && gulp moveDTS && gulp delDTS",
     "tsc:mjs": "tsc --project tsconfig.mjs.json && echo {\"type\":\"module\"}>dist/mjs/package.json",
@@ -24,7 +24,8 @@
     "tsc:test": "tsc --project tsconfig.test.json",
     "test": "npm run tsc:test && mocha",
     "test:dev": "nodemon npm run test",
-    "test:out": "npm run dev:test && node dist/tests/dev.js > tests/tst.out",
+    "test:new": "nodemon --exec run-s dev:clean tsc:test test:out --watch ./src",
+    "test:out": "node dist/tests/dev.js ",
     "build": "run-s build:*",
     "build:clean": "rm -rf dist src/browser",
     "build:tsc": "run-p tsc:cjs tsc:mjs tsc:browser && gulp",
