--- a/package.json
+++ b/package.json
@@ -15,21 +15,19 @@
   "license": "AGPL-3.0",
   "scripts": {
     "start": "npm run dev",
-    "dev": "nodemon --exec run-s dev:* --watch ./src",
+    "dev": "nodemon --exec run-s dev:clean tsc:test dev:watch --watch ./src",
     "dev:clean": "rm -rf dist/src dist/tests tests/tst.out",
     "dev:watch": "node dist/tests/dev.js",
+    "watch": "tsc -w",
+    "build": "run-s build:*",
+    "build:clean": "rm -rf dist src/browser",
+    "build:tsc": "run-p tsc:cjs tsc:mjs tsc:browser && gulp",
+    "test": "npm run tsc:test && mocha",
+    "test:dev": "nodemon npm run test",
     "tsc:cjs": "tsc --project tsconfig.json  && echo {\"type\":\"commonjs\"}>dist/cjs/package.json && gulp moveDTS && gulp delDTS",
     "tsc:mjs": "tsc --project tsconfig.mjs.json && echo {\"type\":\"module\"}>dist/mjs/package.json",
     "tsc:browser": "gulp combineTS && tsc --project tsconfig.browser.json",
     "tsc:test": "tsc --project tsconfig.test.json",
-    "test": "npm run tsc:test && mocha",
-    "test:dev": "nodemon npm run test",
-    "test:new": "nodemon --exec run-s dev:clean tsc:test test:out --watch ./src",
-    "test:out": "node dist/tests/dev.js ",
-    "build": "run-s build:*",
-    "build:clean": "rm -rf dist src/browser",
-    "build:tsc": "run-p tsc:cjs tsc:mjs tsc:browser && gulp",
-    "watch": "tsc -w",
     "prepare": "husky install"
   },
   "main": "./dist/cjs/index.js",
