--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "npm run dev",
     "dev": "nodemon --exec run-s dev:clean tsc:test dev:watch --watch ./src",
     "dev:clean": "rm -rf dist/src dist/tests tests/tst.out",
-    "dev:watch": "node dist/tests/dev.js",
+    "dev:watch": "node dist/tests/dev.js > tests/log.md",
     "watch": "tsc -w",
     "build": "run-s build:*",
     "build:clean": "rm -rf dist src/browser",
